--- a/GringottsBank/appsettings.json
+++ b/GringottsBank/appsettings.json
@@ -22,5 +22,10 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CustomerContext": "Server=(localdb)\\mssqllocaldb;Database=CustomerContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:61955",
+    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
   }
 }
