fix(api-name): make api name more understandable

--- a/GringottsBank/Properties/launchSettings.json
+++ b/GringottsBank/Properties/launchSettings.json
@@ -23,8 +23,11 @@
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "publishAllPorts": true,
-      "useSSL": true
+      "environmentVariables": {
+        "ASPNETCORE_URLS": "https://+:443;http://+:80",
+        "ASPNETCORE_HTTPS_PORT": "44330",
+        "ConnectionStrings:CustomerContext": "Data Source=localhost,1433;Initial Catalog=DockerDb;User Id=SA;Password=qw123QE!@4"
+      }
     }
   }
 }
